--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^2.6.1",
     "dotenv": "^16.5.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongoose": "^8.14.2",
     "next": "15.3.1",
     "razorpay": "^2.9.6",
